# ggul_bot

./: README.md
ggul_bot_v6_config/: CMakeLists.txt  package.xml
ggul_bot_v6_config/config/: ggul_bot_v6.ros2_control.xacro  ggul_bot_v6.srdf  ggul_bot_v6.urdf  ggul_bot_v6.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ggul_bot_v6_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ggul_bot_v7_config/: CMakeLists.txt  package.xml
ggul_bot_v7_config/config/: ggul_bot_v7.ros2_control.xacro  ggul_bot_v7.srdf  ggul_bot_v7.urdf  ggul_bot_v7.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
ggul_bot_v7_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ik_solver_cpp/: CMakeLists.txt  package.xml
ik_solver_cpp/launch/: ik_subscriber.launch.py
ik_solver_cpp/src/: ik_subscriber_node.cpp
pose_publisher_pkg/: package.xml  setup.cfg  setup.py
pose_publisher_pkg/pose_publisher_pkg/: pose_publisher.py
strawberry_detector_pkg/: package.xml  setup.py
strawberry_detector_pkg/strawberry_detector/: strawberry_publisher.py
strawberry_publisher_pkg/: package.xml  setup.cfg  setup.py
strawberry_publisher_pkg/strawberry_publisher_pkg/: Strawberry_Vision.py  classify_disease.py  detected_objects.json  requirements.txt  stereo_calibration_result_test.npz  strawberry_publisher.py  utils.py
strawberry_publisher_pkg/strawberry_publisher_pkg/yolo_detection/: setup.py
websocket_pkg/: package.xml  setup.cfg  setup.py
websocket_pkg/websocket_pkg/: ik_ws_publisher.py  ws_to_ros_publisher.py
