<?xml version="1.0"?>
<package format="3">
  <name>strawberry_publisher_pkg</name>
  <version>0.1.0</version>
  <description>YOLO 딸기 위치 퍼블리셔</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
