<?xml version="1.0"?>
<package format="3">
  <name>websocket_pkg</name>
  <version>0.0.0</version>
  <description>WebSocket to ROS2 publisher</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
